--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nvd3",
-  "version": "0.0.1",
+  "version": "0.0.1-olemi",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.3.0",
